CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( Gen7 )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/" )

SET( EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin" )
SET( LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib" )

FIND_PACKAGE( Boost 1.37 COMPONENTS program_options REQUIRED )
FIND_PACKAGE( GTest REQUIRED )
FIND_PACKAGE( OpenCL REQUIRED )
FIND_PACKAGE( Threads REQUIRED )

INCLUDE_DIRECTORIES( ${GTEST_INCLUDE_DIRS} )

ADD_SUBDIRECTORY( cli-frontend )
ADD_SUBDIRECTORY( crossvmm )
ADD_SUBDIRECTORY( host )
ADD_SUBDIRECTORY( libjit )
ADD_SUBDIRECTORY( test/testjit )
ADD_SUBDIRECTORY( test/testrast )
ADD_SUBDIRECTORY( tools/xenosdis )

