CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( Gen7 )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/" )

SET( EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin" )
SET( LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib" )

FIND_PACKAGE( Boost 1.37 COMPONENTS program_options REQUIRED )
FIND_PACKAGE( OpenCL REQUIRED )
FIND_PACKAGE( Threads REQUIRED )

INCLUDE_DIRECTORIES( SYSTEM
                     "${PROJECT_SOURCE_DIR}/3rdparty/gtest-1.7.0/include" )

ADD_SUBDIRECTORY( 3rdparty/gtest-1.7.0 )

ENABLE_TESTING()

ADD_SUBDIRECTORY( cli-frontend )
ADD_SUBDIRECTORY( crossvmm )
ADD_SUBDIRECTORY( host )
ADD_SUBDIRECTORY( libjit )
ADD_SUBDIRECTORY( libutil )
ADD_SUBDIRECTORY( tools/rastplayground )
ADD_SUBDIRECTORY( tools/xenosdis )

